// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ParkingSession create 1`] = `
Array [
  <View
    style={
      Object {
        "marginBottom": 8,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "SFProDisplay-Semibold",
            "fontSize": 16,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      Vị trí đỗ xe
    </Text>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={false}
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#E8E8E8",
            "borderRadius": 5,
            "borderWidth": 1,
            "color": "#262626",
            "height": 40,
            "marginEnd": 5,
            "marginStart": 5,
            "textAlign": "center",
            "width": 40,
          }
        }
        underlineColorAndroid="transparent"
        value="H"
      />
      <TextInput
        allowFontScaling={true}
        editable={false}
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#E8E8E8",
            "borderRadius": 5,
            "borderWidth": 1,
            "color": "#262626",
            "height": 40,
            "marginEnd": 5,
            "marginStart": 5,
            "textAlign": "center",
            "width": 40,
          }
        }
        underlineColorAndroid="transparent"
        value="U"
      />
      <TextInput
        allowFontScaling={true}
        editable={false}
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#E8E8E8",
            "borderRadius": 5,
            "borderWidth": 1,
            "color": "#262626",
            "height": 40,
            "marginEnd": 5,
            "marginStart": 5,
            "textAlign": "center",
            "width": 40,
          }
        }
        underlineColorAndroid="transparent"
        value="1"
      />
    </View>
  </View>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ xe
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ:
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="MINUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 20,
              "lineHeight": 28,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
        testID="HOUR"
      >
        1 giờ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="PLUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 16,
          "marginTop": 8,
        },
      ]
    }
  >
    Kết thúc 1:00 PM - 24/01/2021
  </Text>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
]
`;

exports[`Test ParkingSession create without spotNumber 1`] = `
Array [
  <View
    style={
      Object {
        "marginBottom": 8,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "SFProDisplay-Semibold",
            "fontSize": 16,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      Vị trí đỗ xe
    </Text>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ xe
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ:
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="MINUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 20,
              "lineHeight": 28,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
        testID="HOUR"
      >
        1 giờ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="PLUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 16,
          "marginTop": 8,
        },
      ]
    }
  >
    Kết thúc 1:00 PM - 24/01/2021
  </Text>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
]
`;

exports[`Test ParkingSession onPress ArriveItem, with preBook 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ xe
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Bắt đầu
  </Text>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "marginRight": 16,
          "opacity": 1,
          "paddingVertical": 8,
          "width": 80,
        }
      }
      testID="ARRIVE_ITEM"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 22,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 4,
            },
          ]
        }
      >
        12:00 PM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#8C8C8C",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 20,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        1.000 đ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#00979D",
          "borderWidth": 1,
          "marginRight": 16,
          "opacity": 1,
          "paddingVertical": 8,
          "width": 80,
        }
      }
      testID="ARRIVE_ITEM"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 22,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 4,
            },
          ]
        }
      >
        12:00 PM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#8C8C8C",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 20,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        1.000 đ
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ:
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="MINUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 20,
              "lineHeight": 28,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
        testID="HOUR"
      >
        1 giờ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="PLUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 16,
          "marginTop": 8,
        },
      ]
    }
  >
    Kết thúc 1:00 PM - 24/01/2021
  </Text>,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <SvgMock />
    <Text
      style={
        Array [
          Object {
            "color": "#8C8C8C",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      Bạn chỉ có thể đặt chỗ trước tối đa 1 tiếng.
    </Text>
  </View>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
]
`;

exports[`Test ParkingSession onPress plus onChangeHour, with preBook 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ xe
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Bắt đầu
  </Text>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#00979D",
          "borderWidth": 1,
          "marginRight": 16,
          "opacity": 1,
          "paddingVertical": 8,
          "width": 80,
        }
      }
      testID="ARRIVE_ITEM"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 22,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 4,
            },
          ]
        }
      >
        12:00 PM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#8C8C8C",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 20,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        1.000 đ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "marginRight": 16,
          "opacity": 1,
          "paddingVertical": 8,
          "width": 80,
        }
      }
      testID="ARRIVE_ITEM"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 22,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 4,
            },
          ]
        }
      >
        12:00 PM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#8C8C8C",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 20,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        1.000 đ
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 16,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian đỗ:
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="MINUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 20,
              "lineHeight": 28,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
        testID="HOUR"
      >
        2 giờ
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderColor": "#E8E8E8",
          "borderRadius": 2,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 48,
        }
      }
      testID="PLUS"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "antoutline",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 16,
          "marginTop": 8,
        },
      ]
    }
  >
    Kết thúc 2:00 PM - 24/01/2021
  </Text>,
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <SvgMock />
    <Text
      style={
        Array [
          Object {
            "color": "#8C8C8C",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      Bạn chỉ có thể đặt chỗ trước tối đa 1 tiếng.
    </Text>
  </View>,
  <View
    style={
      Object {
        "backgroundColor": "#E8E8E8",
        "height": 1,
        "marginVertical": 16,
      }
    }
  />,
]
`;
